--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Hello, world!</title>
 </head>
 
@@ -20,7 +21,7 @@
         </button>
     </nav>
     <div class="p-5">
-        <img src="images/alone.jpg" width="150" height="150"">
+        <img src="images/alone.jpg" width="150" height="150" class="inline-block align-middle">
 
         <!-- <table class="table table-borderless table-hover table-responsive-sm">
             <thead>
