--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Hello, world!</title>
+    <title>Agenda Telefônica</title>
 </head>
 
 <body>
@@ -20,10 +20,14 @@
             <i class="fas fa-plus"></i>
         </button>
     </nav>
-    <div class="p-5">
-        <img src="images/alone.jpg" width="150" height="150" class="inline-block align-middle">
+    <div class="alone text-muted text-center small">
+        <img src="images/alone.jpg" width="150" height="150" class="p-3 m-3"><br>
+        Parece que você nao tem nenhum contato.<br>
+        Porque não tenta <a href="#">criar um novo</a>?
+    </div>
 
-        <!-- <table class="table table-borderless table-hover table-responsive-sm">
+    <!-- <div class="p-5">
+        <table class="table table-borderless table-hover table-responsive-sm">
             <thead>
                 <tr>
                     <th scope="col">Nome</th>
@@ -47,8 +51,8 @@
                     <td>@twitter</td>
                 </tr>
             </tbody>
-        </table> -->
-    </div>
+        </table>
+    </div> -->
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/popper.min.js"></script>
