--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                         <div class="my-3">
                             <i class="fas fa-mobile-alt mr-2"></i>Telefone
                             <input type="text" class="form-control my-1" placeholder="(47) 1425-9435">
-                        </div  class="my-3">
-                        <div  class="my-3">
+                        </div class="my-3">
+                        <div class="my-3">
                             <i class="far fa-calendar mr-2"></i>Data de Nascimento
                             <input type="date" class="form-control my-1">
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
+                <div class="btn-group pb-4 px-4">
                     <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cancelar</button>
                     <button type="button" class="btn btn-dark">Criar</button>
                 </div>
