--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form class="mx-2">
                         <div class="my-3">
                             <i class="far fa-user-circle mr-2"></i>Nome
-                            <input type="text" class="form-control my-1" placeholder="Fulano">
+                            <input type="text" class="form-control my-1 required" placeholder="Fulano">
                         </div>
                         <div class="my-3">
                             <i class="far fa-envelope mr-2"></i>Email
@@ -80,10 +80,10 @@
                             <input type="date" class="form-control my-1">
                         </div>
                     </form>
-                </div>
-                <div class="btn-group pb-4 px-4">
-                    <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-dark">Criar</button>
+                    <div class="btn-group float-right mt-2 mb-3">
+                        <input type="button" class="btn btn-outline-dark" data-dismiss="modal" value="Cancelar">
+                        <input type="submit" class="btn btn-dark" value="Criar">
+                    </div>
                 </div>
             </div>
         </div>
