--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/5fdf21a5c7.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" href="favicon.ico">
     <title>Agenda Telefônica</title>
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
             <i class="far fa-address-book mx-1"></i>
             Agenda Telefônica</a>
     </nav>
 
+    <!-- Nenhum contato -->
     <div class="alone text-muted text-center small">
         <img src="images/alone.png" width="150" height="150" class="p-3 m-3"><br>
         Parece que você nao tem nenhum contato.<br>
         Porque não tenta <a href="#" data-toggle="modal" data-target="#modalNovo">criar um novo</a>?
     </div>
 
+    <!-- Tabela contatos -->
     <!-- <div class="p-5">
         <table class="table table-borderless table-hover table-responsive-sm">
             <thead>
