--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- Modal novo -->
     <div class="modal fade" id="modalNovo" tabindex="-1" role="dialog">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title text-muted">Novo Contato</h5>
@@ -82,6 +82,10 @@
                         <div class="my-3">
                             <i class="far fa-calendar mr-2"></i>Data de Nascimento
                             <input type="date" class="form-control my-1">
+                        </div>
+                        <div class="my-3">
+                            <i class="far fa-building mr-2"></i>Endereo
+                            <textarea class="form-control my-1" placeholder="Avenida Brasil, n° 314"></textarea>
                         </div>
                     </form>
                     <div class="btn-group float-right mt-2 mb-3">
