--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                     <form class="mx-2">
                         <div class="my-3">
                             <i class="far fa-user-circle mr-2"></i>Nome
-                            <input type="text" class="form-control my-1 required" placeholder="Fulano">
+                            <div class="input-group my-1">
+                                <input type="text" class="form-control" placeholder="Fulano">
+                                <input type="text" class="form-control" placeholder="da Silva">
+                              </div>
                         </div>
                         <div class="my-3">
                             <i class="far fa-envelope mr-2"></i>Email
@@ -84,7 +87,7 @@
                             <input type="date" class="form-control my-1">
                         </div>
                         <div class="my-3">
-                            <i class="far fa-building mr-2"></i>Endereo
+                            <i class="far fa-building mr-2"></i>Endereço
                             <textarea class="form-control my-1" placeholder="Avenida Brasil, n° 314"></textarea>
                         </div>
                     </form>
