--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             Agenda Telefônica</a>
     </nav>
 
-    <!-- Nenhum contato -->
+    <!-- Nenhum contato
     <div class="alone text-muted text-center small">
         <img src="images/alone.png" width="150" height="150" class="p-3 m-3"><br>
         Parece que você nao tem nenhum contato.<br>
         Porque não tenta <a href="#" data-toggle="modal" data-target="#modalNovo">criar um novo</a>?
-    </div>
+    </div> -->
 
     <!-- Tabela contatos -->
-    <!-- <div class="p-5">
+    <div class="p-3">
         <table class="table table-borderless table-hover table-responsive-sm">
             <thead>
                 <tr>
@@ -53,7 +53,7 @@
                 </tr>
             </tbody>
         </table>
-    </div> -->
+    </div>
 
     <!-- Modal novo -->
     <div class="modal fade" id="modalNovo" tabindex="-1" role="dialog">
