--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<script src="https://kit.fontawesome.com/5fdf21a5c7.js"></script>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="resources/common/css/styles.css">
 	<link rel="icon" href="favicon.ico">
 	<title>Agenda Telefônica</title>
 </head>
@@ -135,7 +135,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="resources/common/js/main.js"></script>
 </body>
 
 </html>
