--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body>
 	<!-- Navbar -->
 	<nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#"> <i class="far fa-address-book mx-1"></i> Agenda Telefônica
-		</a>
+		<a class="navbar-brand" href="#"> <i class="far fa-address-book mx-1"></i> Agenda Telefônica</a>
 	</nav>
 
 	<!-- Carregando -->
@@ -135,7 +134,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-	<script src="resources/common/js/main.js"></script>
+	<script src="resources/common/js/contatos.js"></script>
 </body>
 
 </html>
