--- a/index.html
+++ b/index.html
@@ -138,9 +138,7 @@
 					<th scope="col"><i class="fas fa-mobile-alt mr-2"></i>Telefone</th>
 				</tr>
 			</thead>
-			<tbody>
-				<template></template>
-			</tbody>
+			<tbody id="contatos"></tbody>
 		</table>
 	</div>
 
