--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 	</div>
 
 	<!-- Botão novo-->
-	<button type="button" class="btn btn-outline-dark btn-lg rounded-pill float-right novo" data-toggle="modal"
+	<button type="button" class="btn btn-dark btn-lg rounded-pill float-right novo" data-toggle="modal"
 		data-target="#modal-novo">
 		Novo contato <i class="fas fa-plus"></i>
 	</button>
 
 	<div class="p-3" id="tabela">
-		<table class="table table-borderless table-hover table-responsive-sm">
+		<table class="table table-borderless table-hover container-fluid">
 			<thead>
 				<tr>
 					<th scope="col"><i class="far fa-user-circle mr-2"></i>Nome</th>
