--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<script src="https://kit.fontawesome.com/5fdf21a5c7.js"></script>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="icon" href="favicon.ico">
-	<title>Agenda Telefônica</title>
+	<title>Contatos</title>
 </head>
 
 <body>
 	<!-- Navbar -->
 	<nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#"> <i class="far fa-address-book mx-1"></i> Agenda Telefônica</a>
+		<a class="navbar-brand" href="#"> <i class="far fa-address-book mx-1"></i> Contatos</a>
 	</nav>
 
 	<!-- Carregando -->
